--- a/demo/src/main/webapp/WEB-INF/views/dynamic/header.jspf
+++ b/demo/src/main/webapp/WEB-INF/views/dynamic/header.jspf
@@ -4,25 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Untree.co">
-    <link rel="shortcut icon" href="favicon.png">
+    <link href='<c:url value="/resources/images/favicon.png"/>' rel="shortcut icon"/>
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
+    <meta name="description" content=""/>
+    <meta name="keywords" content="bootstrap, bootstrap4"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap"
+          rel="stylesheet">
 
-    <link rel="stylesheet" href='<c:url value="/resources/css/bootstrap.min.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/css/owl.carousel.min.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/css/owl.theme.default.min.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/css/jquery.fancybox.min.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/fonts/icomoon/style.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/fonts/flaticon/font/flaticon.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/css/daterangepicker.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/css/aos.css"/>'/>
-    <link rel="stylesheet" href='<c:url value="/resources/css/style.css"/>'/>
+    <link href='<c:url value="/resources/css/bootstrap.min.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/css/owl.carousel.min.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/css/owl.theme.default.min.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/css/jquery.fancybox.min.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/fonts/icomoon/style.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/fonts/flaticon/font/flaticon.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/css/daterangepicker.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/css/aos.css"/>' rel="stylesheet"/>
+    <link href='<c:url value="/resources/css/style.css"/>' rel="stylesheet"/>
 
-    <title>Tour Free Bootstrap Template for Travel Agency by Untree.co</title>
+    <title>Travel Office</title>
 
 </head>
