--- a/demo/src/main/webapp/WEB-INF/views/dynamic/footer.jspf
+++ b/demo/src/main/webapp/WEB-INF/views/dynamic/footer.jspf
@@ -1,1 +1,143 @@
+</div>
+</div>
+</div>
+</div>
+
+<div class="py-5 cta-section">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-12">
+                <h2 class="mb-2 text-white">Lets you Explore the Best. Contact Us Now</h2>
+                <p class="mb-4 lead text-white text-white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Excepturi, fugit?</p>
+                <p class="mb-0"><a href="booking.html"
+                                   class="btn btn-outline-white text-white btn-md font-weight-bold">Get in
+                    touch</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="site-footer">
+    <div class="inner first">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="widget">
+                        <h3 class="heading">About Tour</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                            there live the blind texts.</p>
+                    </div>
+                    <div class="widget">
+                        <ul class="list-unstyled social">
+                            <li><a href="#"><span class="icon-twitter"></span></a></li>
+                            <li><a href="#"><span class="icon-instagram"></span></a></li>
+                            <li><a href="#"><span class="icon-facebook"></span></a></li>
+                            <li><a href="#"><span class="icon-linkedin"></span></a></li>
+                            <li><a href="#"><span class="icon-dribbble"></span></a></li>
+                            <li><a href="#"><span class="icon-pinterest"></span></a></li>
+                            <li><a href="#"><span class="icon-apple"></span></a></li>
+                            <li><a href="#"><span class="icon-google"></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-2 pl-lg-5">
+                    <div class="widget">
+                        <h3 class="heading">Pages</h3>
+                        <ul class="links list-unstyled">
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-2">
+                    <div class="widget">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="links list-unstyled">
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="widget">
+                        <h3 class="heading">Contact</h3>
+                        <ul class="list-unstyled quick-info links">
+                            <li class="email"><a href="#">mail@example.com</a></li>
+                            <li class="phone"><a href="#">+1 222 212 3819</a></li>
+                            <li class="address"><a href="#">43 Raymouth Rd. Baltemoer, London 3910</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="inner dark">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-8 mb-3 mb-md-0 mx-auto">
+                    <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                        . All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co"
+                                                                                class="link-highlight">Untree.co</a>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="overlayer"></div>
+<div class="loader">
+    <div class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+
+<script src='<c:url value="/resources/js/jquery-3.4.1.min.js"/>'></script>
+<script src='<c:url value="/resources/js/popper.min.js"/>'></script>
+<script src='<c:url value="/resources/js/bootstrap.min.js"/>'></script>
+<script src='<c:url value="/resources/js/owl.carousel.min.js"/>'></script>
+<script src='<c:url value="/resources/js/jquery.animateNumber.min.js"/>'></script>
+<script src='<c:url value="/resources/js/jquery.waypoints.min.js"/>'></script>
+<script src='<c:url value="/resources/js/jquery.fancybox.min.js"/>'></script>
+<script src='<c:url value="/resources/js/aos.js"/>'></script>
+<script src='<c:url value="/resources/js/moment.min.js"/>'></script>
+<script src='<c:url value="/resources/js/daterangepicker.js"/>'></script>
+
+<script src='<c:url value="/resources/js/typed.js"/>'></script>
+<script>
+    $(function () {
+        var typed = new Typed('.typed-words', {
+            strings: ["San Francisco.", " Paris.", " New Zealand.", " Peru.", " London.", " Sri Lanka."],
+            typeSpeed: 80,
+            backSpeed: 80,
+            backDelay: 4000,
+            startDelay: 1000,
+            loop: true,
+            showCursor: true,
+            preStringTyped: (arrayPos, self) => {
+                arrayPos++;
+                console.log(arrayPos);
+                $('.slides img').removeClass('active');
+                $('.slides img[data-id="' + arrayPos + '"]').addClass('active');
+            }
+
+        });
+    })
+
+    function getNumberPeople() {
+        document.getElementById("numberOfAdults").innerHTML = document.getElementById('adults').value;
+        document.getElementById("numberOfChldren").innerHTML = document.getElementById('children').value;
+
+    }
+</script>
+
+<script src='<c:url value="/resources/js/custom.js"/>'></script>
+
+</body>
 </html>
